--- a/MyPet_FrontEnd/src/app/navbar/navbar.component.html
+++ b/MyPet_FrontEnd/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
             <li><a href="">Mis mascotas</a></li>
         </div>
         <div class="section right">
-            <li><a href="">Iniciar Sesión</a></li>
+            <li><a href="" routerLink="login">Iniciar Sesión</a></li>
             <li><a href="">Registrarme</a></li>
         </div>
     </ul>
