--- a/MyPet_FrontEnd/src/app/login/login.component.html
+++ b/MyPet_FrontEnd/src/app/login/login.component.html
@@ -2,27 +2,18 @@
     <div class="principal">
         <div class="container" id="log">
             <div class="panel leftInit" id="lL">
-                <h3>Sign In</h3>
-                <span>Enter your email and password</span>
+                <h3>Iniciar Sesión</h3>
+                <span>Ingresa tu correo y tu contraseña</span>
                 <form action="" class="frmLogin">
                     <input type="email" class="txtInput" placeholder="Email">
                     <input type="password" class="txtInput" placeholder="Password">
-                    <input type="submit" value="SIGN IN">
+                    <input type="submit" value="INICIAR SESIÓN">
                 </form>
-                <div class="social">
-                    <span>Or login with:</span>
-                    <div class="socialOptions">
-                        <a href=""><img src="../imgs/correo_C.png" alt=""></a>
-                        <a href=""><img src="../imgs/fb_C.png" alt=""></a>
-                        <a href=""><img src="../imgs/google-mas_C.png" alt=""></a>
-                        <a href=""><img src="../imgs/linkedin_C.png" alt=""></a>
-                    </div>
-                </div>
             </div>
             <div class="panel rightInit" id="rL">
-                <h2>WELCOME</h2>
-                <a href="">Forgot password?</a>
-                <button id="btnRegister" class="btn register">REGISTER</button>
+                <h2>BIENVENIDO!</h2>
+                <a>Aún no estas registrado?</a>
+                <button routerLink="/registro_usuario" class="btn register">REGISTRARME</button>
             </div>
         </div>
     </div>
