--- a/MyPet_FrontEnd/src/app/navbar/navbar.component.html
+++ b/MyPet_FrontEnd/src/app/navbar/navbar.component.html
@@ -6,8 +6,8 @@
             <li><a href="">Mis mascotas</a></li>
         </div>
         <div class="section right">
-            <li><a href="" routerLink="login">Iniciar Sesión</a></li>
-            <li><a href="">Registrarme</a></li>
+            <li><a routerLink="login">Iniciar Sesión</a></li>
+            <li><a routerLink="registro_usuario">Registrarme</a></li>
         </div>
     </ul>
 </nav>
