--- a/MyPet_FrontEnd/src/app/registroUsuario/registroUsuario.component.css
+++ b/MyPet_FrontEnd/src/app/registroUsuario/registroUsuario.component.css
@@ -9,7 +9,7 @@
 
 .btn {
     background: none;
-    border: 2px solid #FFF;
+    border: 2px solid #000;
     border-radius: 30px;
     padding: 10px;
     color: #000;
@@ -52,7 +52,8 @@
 }
 
 .leftInit {
-    background-color: #FFF;
+    background: rgb(0,252,233);
+    background: linear-gradient(155deg, rgba(0,252,233,1) 0%, rgba(0,252,233,1) 0%, rgba(197,0,255,1) 100%);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -62,8 +63,8 @@
 }
 
 .panel span {
-    color: rgba(105, 105, 105);
-    font-size: 18px;;
+    color: #FFF;
+    font-size: 18px;
 }
 
 .panel .frmLogin {
@@ -72,18 +73,22 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 50%;;
+    height: 70%;;
 }
 
 .panel .frmLogin .txtInput {
     width: 80%;
-    background-color: rgba(105, 105, 105, 0.4);
+    background-color: rgba(255, 255, 255, 0.4);
     border-radius: 8px;
     padding: 10px;
     font-size: 18px;
     margin: 10px 0;
-    border: 2px solid rgba(55, 55, 55, 0.4);
+    border: 2px solid #FFF;
     cursor: text;
+}
+
+.panel .frmLogin .txtInput::placeholder {
+    color: #4F4557;
 }
 
 .panel .frmLogin input[type="submit"] {
@@ -108,8 +113,7 @@
 
 .rightInit {
     display: flex;
-    background: rgb(0,252,233);
-    background: linear-gradient(155deg, rgba(0,252,233,1) 0%, rgba(0,252,233,1) 0%, rgba(197,0,255,1) 100%);
+    background-color: #FFF;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -117,19 +121,19 @@
 .rightInit h2 {
     font-size: 56px;
     font-weight: bolder;
-    color: #FFF;
+    color: #000;
 }
 
 .rightInit a {
     text-decoration: none;
-    color: #FFF;
+    color: #000;
     cursor: pointer;
 }
 
 .rightInit .register {
     font-weight: bold;
     font-size: 20px;
-    color: #FFF;
+    color: #000;
     width: 50%;
     margin-top: 20px;
 }
