Editar y agregar mascota

--- a/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
+++ b/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
@@ -17,7 +17,7 @@
     <div class="myPets">
         <div class="petsContainer">
             <div class="cardPet">
-                <button class="optionsPet">
+                <button routerLink="/my_pet" class="optionsPet">
                     <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
                 </button>
                 <img src="../../assets/imgs/perro.png" alt="">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="cardPet">
-                <button class="optionsPet">
+                <button routerLink="/my_pet" class="optionsPet">
                     <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
                 </button>
                 <img src="../../assets/imgs/perro.png" alt="">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="cardPet">
-                <button class="optionsPet">
+                <button routerLink="/my_pet" class="optionsPet">
                     <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
                 </button>
                 <img src="../../assets/imgs/perro.png" alt="">
@@ -53,7 +53,31 @@
                 </div>
             </div>
             <div class="cardPet">
-                <button class="optionsPet">
+                <button routerLink="/my_pet" class="optionsPet">
+                    <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
+                </button>
+                <img src="../../assets/imgs/perro.png" alt="">
+                <h4>Kaos</h4>
+                <span class="raza">Pitbull con labrador</span>
+                <span class="age">6 meses</span>
+                <div>
+                    <span>SALUDABLE</span>
+                </div>
+            </div>
+            <div class="cardPet">
+                <button routerLink="/my_pet" class="optionsPet">
+                    <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
+                </button>
+                <img src="../../assets/imgs/perro.png" alt="">
+                <h4>Kaos</h4>
+                <span class="raza">Pitbull con labrador</span>
+                <span class="age">6 meses</span>
+                <div>
+                    <span>SALUDABLE</span>
+                </div>
+            </div>
+            <div class="cardPet">
+                <button routerLink="/my_pet" class="optionsPet">
                     <img src="../../assets/imgs/edit.png" tittle="Editar info." alt="">
                 </button>
                 <img src="../../assets/imgs/perro.png" alt="">
@@ -66,7 +90,7 @@
             </div>
         </div>
         <div class="petsOptionsCrud">
-            <button class="btnAddPet">Agregar una nueva mascota</button>
+            <button class="btnAddPet" routerLink="/add_pet">Agregar una nueva mascota</button>
         </div>
     </div>
 </div>
