--- a/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
+++ b/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="options">
             <span>Configuraciones:</span>
-            <button class="btn edit">Editar mi perfil</button>
+            <button routerLink="/edit_user" class="btn edit">Editar mi perfil</button>
             <button class="btn delete">Eliminar mi perfil</button>
         </div>
     </div>
