--- a/MyPet_FrontEnd/src/app/editUser/editUser.component.html
+++ b/MyPet_FrontEnd/src/app/editUser/editUser.component.html
@@ -4,12 +4,11 @@
             <div class="panel leftInit" id="lL">
                 <h3>EDITAR</h3>
                 <span>Editar mi información</span>
-                <form action="" class="frmLogin">
-                    <input type="text" class="txtInput" placeholder="Nombre completo">
-                    <input type="email" class="txtInput" placeholder="Correo">
+                <form [formGroup]="frmEditUser" (ngSubmit)="onSubmit()" class="frmLogin">
+                    <input formControlName="Name" type="text" class="txtInput" placeholder="Nombre completo">
+                    <input formControlName="email" type="email" class="txtInput" placeholder="Correo">
                     <input type="password" class="txtInput" placeholder="Contraseña">
-                    <input type="password" class="txtInput" placeholder="Repite tu contraseña">
-                    <input type="number" class="txtInput" placeholder="Edad">
+                    <input formControlName="password" type="password" class="txtInput" placeholder="Repite tu contraseña">
                     <input type="submit" value="Actualizar mis datos">
                 </form>
             </div>
