--- a/MyPet_FrontEnd/src/app/eliminar-pet/eliminar-pet.component.html
+++ b/MyPet_FrontEnd/src/app/eliminar-pet/eliminar-pet.component.html
@@ -1,4 +1,4 @@
-<div class="modalCover">
+<div class="modalCover" @enterState>
     <div class="opciones">
         <button class="btn close" (click)="cerrarModal()">CANCELAR</button>
         <button (click)="onSubmit()" class="btn del">ELIMINAR</button>
