--- a/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
+++ b/MyPet_FrontEnd/src/app/usuarioPerfil/usuarioPerfil.component.html
@@ -1,4 +1,4 @@
-<div class="bodyCover">
+<div class="bodyCover" @enterState>
     <div class="myInfo">
         <img src="../../assets/imgs/usuario.png" alt="" class="userPick">
         <div class="dataUser">
