--- a/MyPet_FrontEnd/src/app/login/login.component.html
+++ b/MyPet_FrontEnd/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="bodyy">
     <div class="principal">
-        <div class="container" id="log">
+        <div class="container" id="log" @enterState>
             <div class="panel leftInit" id="lL">
                 <h3>Iniciar Sesión</h3>
                 <span>Ingresa tu correo y tu contraseña</span>
