Patadas de ahogado

--- a/MyPet_FrontEnd/src/app/myPet/myPet.component.html
+++ b/MyPet_FrontEnd/src/app/myPet/myPet.component.html
@@ -5,7 +5,7 @@
     <div class="dataPet">
         <form [formGroup]="frmEditPet" (ngSubmit)="onSubmit()" class="frmPet">
             <h5>Actualiza los datos de tu mejor amigo!</h5>
-            <input type="text" formControlName="namePet" name="" id="" class="txtInput" placeholder="Nombre de mi mascota">
+            <input type="text" value="{{pet.namePet}}" formControlName="namePet" name="" id="" class="txtInput" placeholder="Nombre de mi mascota">
             <input type="text" formControlName="raza" name="" id="" class="txtInput" placeholder="Raza de mi mascota">
             <input type="text" formControlName="state" name="" id="" class="txtInput" placeholder="Estado de mi mascota">
             <input type="text" formControlName="description" name="" id="" class="txtInput" placeholder="Descripción del estado...">
@@ -20,7 +20,7 @@
         </form>
     </div>
     <div class="optionsPet">
-        <button class="btnOP" routerLink="/user_profile">Volver a mi perfil</button>
+        <button class="btnOP" routerLink="/user_profile/{{idUser}}">Volver a mi perfil</button>
         <button (click)="openModal()" class="btnOP Del">Eliminar mascota</button>
     </div>
 </div>
