--- a/MyPet_FrontEnd/src/app/navbar/navbar.component.html
+++ b/MyPet_FrontEnd/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
         <div class="section right">
             <li><a routerLink="login">Iniciar Sesión</a></li>
             <li><a routerLink="registro_usuario">Registrarme</a></li>
+            <li><a routerLink="credits">About Us</a></li>
         </div>
     </ul>
 </nav>
